fix(table): design alignment NDBX  and AG Grid theme (#1104)
* fix(table): correct sorting, draging style

* fix(table): change sort icon

* fix(table): position sort icon

* fix(table): position sort icon

* fix(table): correct test

* fix(table): position sort icon

* fix(table): correct icon size

* fix(table): use sort icon variable

* fix(table): use variable

--- a/projects/ng-aquila/src/shared-styles/theming/tokens.scss
+++ b/projects/ng-aquila/src/shared-styles/theming/tokens.scss
@@ -1229,7 +1229,8 @@ $nx-theme: (
     table-cell-color: text-01,
     table-header-cell-background-color: transparent,
     table-row-background-color: transparent,
-    table-resize-handle-color: ui-04,
+    table-resize-handle-color: #c2c2c2,
+    table-sort-icon-size: 20px,
     // Sticky column can never be transparent
     table-sticky-column-background-color: ui-background,
     // Selectable table
